--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"chalk": "^2.4.1",
+		"copy-dir": "^0.4.0",
 		"directory-exists": "^2.0.1",
 		"fancy-log": "^1.3.3",
 		"file-exists": "^5.0.1",
