--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 	},
 	"dependencies": {
 		"chalk": "^2.4.1",
-		"copy-dir": "^0.4.0",
 		"directory-exists": "^2.0.1",
 		"fancy-log": "^1.3.3",
 		"file-exists": "^5.0.1",
@@ -29,6 +28,7 @@
 		"mkdirp": "^0.5.1",
 		"path-exists": "^4.0.0",
 		"prettier": "^1.18.2",
+		"recursive-copy": "^2.0.10",
 		"rimraf": "^2.6.3",
 		"strip-ansi": "^5.2.0"
 	},
