--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
 		"fancy-log": "^1.3.3",
 		"file-exists": "^5.0.1",
 		"file-extension": "^4.0.5",
+		"flatry": "^1.0.12",
+		"make-dir": "^3.0.0",
 		"minimist": "^1.2.0",
-		"mkdirp": "^0.5.1",
 		"path-exists": "^4.0.0",
 		"prettier": "^1.18.2",
 		"recursive-copy": "^2.0.10",
