--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier": "^1.18.2",
 		"recursive-copy": "^2.0.10",
 		"rimraf": "^3.0.0",
+		"shelljs": "^0.8.3",
 		"strip-ansi": "^5.2.0",
 		"through2": "^3.0.1"
 	},
