chore: Edit .editconfig for .nim files

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.nim]
+indent_style = space
+
 # Set default displayed tab size for repository.
 # [https://stackoverflow.com/a/33831598]
 [*.{js,jsx,html,sass}]
