chore: Update .editorconfig for shell test (*test.sh) scripts

--- a/.editorconfig
+++ b/.editorconfig
@@ -24,3 +24,13 @@ indent_size = 4
 trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
+
+# Ignore shell tests.
+# [https://stackoverflow.com/a/40348831]
+[*test.sh]
+# charset = none
+# end_of_line = none
+# insert_final_newline = none
+trim_trailing_whitespace = false
+# indent_style = none
+# indent_size = none
