--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"tests": "tests/nodecliac.sh && tests/parser.sh && tests/formatter.sh",
 		"tests-silent": "tests/nodecliac.sh -s && tests/parser.sh -s && tests/formatter.sh -s",
 		"build:acdev": "nim c --run --hints:on --showAllMismatches:on src/scripts/ac.nim && nodecliac setup --force",
-		"build:acprod": "nim c --run --debugger:off --opt:speed --checks:off --threads:on --assertions:off --hints:off --showAllMismatches:on src/scripts/ac.nim && nodecliac setup --force"
+		"build:acprod": "nim c -d:release --debugger:off --opt:speed --checks:off --threads:on --assertions:off --hints:off --showAllMismatches:off src/scripts/ac.nim && strip -s src/scripts/ac && nodecliac setup --force"
 	},
 	"dependencies": {
 		"chalk": "^2.4.1",
