--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"preinstall": "git config core.hooksPath .githooks",
 		"pretty": "prettier-cli-watcher --configpath='/configs/prettier.config.json'",
 		"lint": "cross-env ESLINT_CFS_VERBOSE=true ./node_modules/eslint/bin/eslint.js -c='configs/eslint.config.js' --ignore-path='configs/eslintignore' --format='simple' '**/*.{js,jsx}'; exit 0",
-		"tests": "tests/nodecliac.sh && tests/parser.sh && tests/formatter.sh",
-		"tests:silent": "tests/nodecliac.sh -s && tests/parser.sh -s && tests/formatter.sh -s",
+		"tests": "tests/scripts/main.sh",
+		"tests:silent": "tests/scripts/main.sh -s",
 		"build:acdev": "./compile -d",
 		"build:acprod": "./compile -p"
 	},
