chore: Further sublime-text-3/vscode grammar package restructuring

--- a/resources/editors/vscode/cgabriel5-acmap-grammar/package.json
+++ b/resources/editors/vscode/cgabriel5-acmap-grammar/package.json
@@ -29,7 +29,7 @@
 			{
 				"language": "acmap",
 				"scopeName": "source.acmap",
-				"path": "./syntaxes/acmap.tmLanguage.json"
+				"path": "./grammars/acmap.tmLanguage.json"
 			}
 		]
 	}
