--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"rimraf": "^3.0.0",
 		"shelljs": "^0.8.3",
 		"strip-ansi": "^6.0.0",
+		"symlink-dir": "^3.1.1",
 		"through2": "^3.0.1"
 	},
 	"author": "Carlos Gabriel",
