--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"build:acbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/scripts/ac/ac.nim \\$0 && mv src/scripts/ac/ac.\\\"\\$USER_OS\\\" src/scripts/bin/ac.\\\"\\$USER_OS\\\"\"",
 		"build:nimbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/parser/nim/index.nim \\$0 && mv src/parser/nim/index.\\\"\\$USER_OS\\\" src/parser/nim/nodecliac.\\\"\\$USER_OS\\\"\"",
 		"files": "bash -c \"find . -not -path \\\"*/node_modules/*\\\" -type f -name \\\"*.\\$0\\\" -not -path '*/\\\\.*'\"",
-		"install:binary": "sudo bash -c \"s=\\\"\\$(cat ./install)\\\"; echo \\\"\\$s\\\" | bash -s -- --installer=binary --branch=\\$0 && source ~/.bashrc\""
+		"install:local": "bash -c \"s=\\\"\\$(<./install)\\\"; echo \\\"\\$s\\\" | bash -s -- --installer=\\$0 --branch=\\$1 && source ~/.bashrc\"",
+		"install:remote": "bash -c \"curl -Ls https://raw.githubusercontent.com/cgabriel5/nodecliac/\\$1/install | bash -s -- --installer=\\$0 --branch=\\$1 && source ~/.bashrc\""
 	},
 	"dependencies": {
 		"chalk": "^3.0.0",
