--- a/configs/prettier.config.json
+++ b/configs/prettier.config.json
@@ -1,23 +1,19 @@
 {
-	"*": {
-		"bracketSpacing": true,
-		"jsxBracketSameLine": false,
-		"printWidth": 80,
-		"semi": true,
-		"singleQuote": false,
-		"tabWidth": 4,
-		"trailingComma": "none",
-		"useTabs": true,
-		"parser": "babylon"
-	},
-	"md": {
-		"bracketSpacing": true,
-		"jsxBracketSameLine": false,
-		"printWidth": 80,
-		"semi": true,
-		"singleQuote": false,
-		"tabWidth": 2,
-		"trailingComma": "none",
-		"useTabs": false
-	}
+	"bracketSpacing": true,
+	"jsxBracketSameLine": false,
+	"printWidth": 80,
+	"semi": true,
+	"singleQuote": false,
+	"tabWidth": 4,
+	"trailingComma": "none",
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": "*.md",
+			"options": {
+				"tabWidth": 2,
+				"useTabs": false
+			}
+		}
+	]
 }
