--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"chalk": "^4.0.0",
+		"deepcopy": "^2.0.0",
 		"directory-exists": "^2.0.1",
 		"du": "^1.0.0",
 		"fancy-log": "^1.3.3",
