--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"tests": "tests/scripts/main.sh -t ./tests/scripts/tests.sh",
 		"tests:silent": "tests/scripts/main.sh -p false -t ./tests/scripts/tests.sh",
 		"tests:force": "tests/scripts/main.sh -f true -t ./tests/scripts/tests.sh",
-		"build:acbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/scripts/ac/ac.nim \\$0 && mv src/scripts/ac/ac.\\\"\\$USER_OS\\\" src/scripts/bin/ac.\\\"\\$USER_OS\\\"\"",
+		"build:acbin": "bash -c \"OS=`uname`;F=\\\"\\${1:-ac}\\\";USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/scripts/ac/\\\"\\$F.\\\"nim \\$0 && mv src/scripts/ac/\\\"\\$F.\\\"\\\"\\$USER_OS\\\" src/scripts/bin/\\\"\\$F.\\\"\\\"\\$USER_OS\\\"\"",
 		"build:nimbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/parser/nim/index.nim \\$0 && mv src/parser/nim/index.\\\"\\$USER_OS\\\" src/parser/nim/nodecliac.\\\"\\$USER_OS\\\"\"",
 		"files": "bash -c \"find . -not -path \\\"*/node_modules/*\\\" -type f -name \\\"*.\\$0\\\" -not -path '*/\\\\.*'\"",
 		"install:local": "sudo echo > /dev/null 2>&1 && bash -c \"s=\\\"\\$(<./install.sh)\\\"; echo \\\"\\$s\\\" | bash -s -- --installer=\\$0 --branch=\\$1 && source ~/.bashrc\"",
