update: Add -n (names) flag to run specific tests instead of running all

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"postinstall": "./src/scripts/main/postinstall.sh",
 		"pretty": "prettier-cli-watcher --watcher=hound --notify --setup",
 		"lint": "cross-env ESLINT_CFS_VERBOSE=true ./node_modules/eslint/bin/eslint.js -c='configs/eslint.config.js' --ignore-path='configs/eslintignore' --format='simple' '**/*.{js,jsx}'; exit 0",
-		"tests": "tests/scripts/main.sh -t ./tests/scripts/tests.sh",
-		"tests:silent": "tests/scripts/main.sh -p false -t ./tests/scripts/tests.sh",
-		"tests:force": "tests/scripts/main.sh -f true -t ./tests/scripts/tests.sh",
+		"tests": "tests/scripts/main.sh -t ./tests/scripts/tests.sh -n $1",
+		"tests:silent": "tests/scripts/main.sh -p false -t ./tests/scripts/tests.sh -n $1",
+		"tests:force": "tests/scripts/main.sh -f true -t ./tests/scripts/tests.sh -n $1",
 		"build:acbin": "bash -c \"OS=`uname`;F=\\\"\\${1:-ac}\\\";USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/scripts/ac/\\\"\\$F.\\\"nim \\$0 && mv src/scripts/ac/\\\"\\$F.\\\"\\\"\\$USER_OS\\\" src/scripts/bin/\\\"\\$F.\\\"\\\"\\$USER_OS\\\"\"",
 		"build:nimbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/parser/nim/index.nim \\$0 && mv src/parser/nim/index.\\\"\\$USER_OS\\\" src/parser/nim/nodecliac.\\\"\\$USER_OS\\\"\"",
 		"files": "bash -c \"find . -not -path \\\"*/node_modules/*\\\" -type f -name \\\"*.\\$0\\\" -not -path '*/\\\\.*'\"",
