--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"make-dir": "^3.1.0",
 		"minimist": "^1.2.5",
 		"path-exists": "^4.0.0",
+		"prompt-sync": "^4.2.0",
 		"recursive-copy": "^2.0.10",
 		"rimraf": "^3.0.2",
 		"shelljs": "^0.8.4",
