--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"file-exists": "^5.0.1",
 		"file-extension": "^4.0.5",
 		"flatry": "^1.0.12",
+		"follow-redirects": "^1.13.0",
 		"make-dir": "^3.1.0",
 		"minimist": "^1.2.5",
 		"path-exists": "^4.0.0",
