chore: Update nodecliac package.ini

--- a/resources/packages/nodecliac/package.ini
+++ b/resources/packages/nodecliac/package.ini
@@ -1,9 +1,10 @@
 [Package]
 name = "nodecliac"
 version = "0.0.1"
-description = "Easy bash completion for CLI programs."
+description = "Bash completion for nodecliac command."
 license = "MIT"
 
 [Author]
 name = "cgabriel5"
 repo = "https://github.com/cgabriel5/nodecliac"
+sub = "resources/packages/nodecliac"
