chore: [checkpoint] 2021 base

--- a/configs/prettier.config.json
+++ b/configs/prettier.config.json
@@ -14,6 +14,12 @@
 				"tabWidth": 2,
 				"useTabs": false
 			}
+		},
+		{
+			"files": "*.{js,html}",
+			"options": {
+				"printWidth": 120
+			}
 		}
 	]
 }
