chore: Update all completion package repo/sub entries

--- a/resources/packages/op/package.ini
+++ b/resources/packages/op/package.ini
@@ -6,5 +6,5 @@ license = "MIT"
 
 [Author]
 name = "cgabriel5"
-repo = "https://github.com/cgabriel5/nodecliac"
-sub = "resources/packages/op"
+repo = "https://github.com/cgabriel5/nodecliac-packages"
+sub = "op"
