--- a/resources/packages/prettier-cli-watcher/package.ini
+++ b/resources/packages/prettier-cli-watcher/package.ini
@@ -6,5 +6,5 @@ license = "MIT"
 
 [Author]
 name = "cgabriel5"
-repo = "https://github.com/cgabriel5/nodecliac"
-sub = "resources/packages/prettier-cli-watcher"
+repo = "https://github.com/cgabriel5/nodecliac-packages"
+sub = "prettier-cli-watcher"
