--- a/resources/packages/m-cli/package.ini
+++ b/resources/packages/m-cli/package.ini
@@ -6,5 +6,5 @@ license = "MIT"
 
 [Author]
 name = "cgabriel5"
-repo = "https://github.com/cgabriel5/nodecliac"
-sub = "resources/packages/m-cli"
+repo = "https://github.com/cgabriel5/nodecliac-packages"
+sub = "m-cli"
