--- a/resources/packages/subl/package.ini
+++ b/resources/packages/subl/package.ini
@@ -6,5 +6,5 @@ license = "MIT"
 
 [Author]
 name = "cgabriel5"
-repo = "https://github.com/cgabriel5/nodecliac"
-sub = "resources/packages/subl"
+repo = "https://github.com/cgabriel5/nodecliac-packages"
+sub = "subl"
