--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"tests": "tests/scripts/main.sh -t ./tests/scripts/tests.sh -n $1",
 		"tests:silent": "tests/scripts/main.sh -p false -t ./tests/scripts/tests.sh -n $1",
 		"tests:force": "tests/scripts/main.sh -f true -t ./tests/scripts/tests.sh -n $1",
+		"tests:debug": "tests/scripts/main.sh -f true -d true -t ./tests/scripts/tests.sh -n $1",
 		"build:acbin": "bash -c \"OS=`uname`;F=\\\"\\${1:-ac}\\\";USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/scripts/ac/\\\"\\$F.\\\"nim \\$0 && mv src/scripts/ac/\\\"\\$F.\\\"\\\"\\$USER_OS\\\" src/scripts/bin/\\\"\\$F.\\\"\\\"\\$USER_OS\\\"\"",
 		"build:nimbin": "bash -c \"OS=`uname`;USER_OS=\\\"\\${OS,,}\\\";USER_OS=\\\"\\${USER_OS/darwin/macosx}\\\"; src/scripts/main/compile.sh -i src/parser/nim/index.nim \\$0 && mv src/parser/nim/index.\\\"\\$USER_OS\\\" src/parser/nim/nodecliac.\\\"\\$USER_OS\\\"\"",
 		"files": "bash -c \"find . -not -path \\\"*/node_modules/*\\\" -type f -name \\\"*.\\$0\\\" -not -path '*/\\\\.*'\"",
