--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
 		"shelljs": "^0.8.4",
 		"strip-ansi": "^6.0.0",
 		"symlink-dir": "^4.1.0",
-		"through2": "^4.0.2"
+		"through2": "^4.0.2",
+		"xregexp": "^5.1.0"
 	},
 	"author": "Carlos Gabriel",
 	"license": "MIT",
